build: automate Windows toolchain discovery